--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "scappy.org",
+  "name": "ng-scrappy",
   "version": "0.0.0",
   "license": "MIT",
+  "main": "dist/apps/functions/main.js",
   "scripts": {
     "ng": "nx",
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
@@ -9,6 +10,9 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
+    "firebase:serve": "concurrently --kill-others \"yarn run build functions --watch\" \"firebase serve --only functions\"",
+    "firebase:shell": "concurrently --kill-others \"yarn run build functions --watch\" \"firebase functions:shell\" --raw",
+    "firebase:deploy": "firebase deploy",
     "lint": "nx workspace-lint && ng lint",
     "e2e": "ng e2e",
     "affected:apps": "nx affected:apps",
@@ -38,6 +42,9 @@
     "@angular/platform-browser-dynamic": "^11.2.0",
     "@angular/router": "^11.2.0",
     "@nrwl/angular": "11.5.2",
+    "firebase": "^8.3.1",
+    "firebase-admin": "^9.5.0",
+    "firebase-functions": "^3.13.2",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
     "zone.js": "^0.10.2"
@@ -55,6 +62,7 @@
     "@nrwl/eslint-plugin-nx": "11.5.2",
     "@nrwl/jest": "11.5.2",
     "@nrwl/linter": "11.5.2",
+    "@nrwl/node": "11.5.2",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/tao": "11.5.2",
     "@nrwl/workspace": "11.5.2",
@@ -62,6 +70,7 @@
     "@types/node": "14.14.33",
     "@typescript-eslint/eslint-plugin": "4.3.0",
     "@typescript-eslint/parser": "4.3.0",
+    "concurrently": "^6.0.0",
     "cypress": "^6.0.1",
     "dotenv": "8.2.0",
     "eslint": "7.10.0",
