--- a/firebase.json
+++ b/firebase.json
@@ -2,7 +2,8 @@
   "functions": {
     "predeploy": [
       "yarn lint functions",
-      "yarn build functions --prod"
+      "yarn build functions --prod",
+      "node tools/scripts/build-functions-package.js"
     ],
     "source": "/"
   }
