--- a/package.json
+++ b/package.json
@@ -82,5 +82,9 @@
     "ts-jest": "26.4.0",
     "ts-node": "~9.1.1",
     "typescript": "~4.0.3"
-  }
+  },
+  "firebase-functions-dependencies": [
+    "firebase-admin",
+    "firebase-functions"
+  ]
 }
