--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@angular/platform-browser": "^11.2.0",
     "@angular/platform-browser-dynamic": "^11.2.0",
     "@angular/router": "^11.2.0",
+    "@google-cloud/pubsub": "^2.10.0",
     "@nrwl/angular": "11.5.2",
     "firebase": "^8.3.1",
     "firebase-admin": "^9.5.0",
@@ -87,6 +88,7 @@
   "firebase-functions-dependencies": [
     "firebase-admin",
     "firebase-functions",
-    "puppeteer"
+    "puppeteer",
+    "@google-cloud/pubsub"
   ]
 }
