--- a/nx.json
+++ b/nx.json
@@ -23,6 +23,7 @@
   "projects": {
     "ng-scrappy": { "tags": [] },
     "ng-scrappy-e2e": { "tags": [], "implicitDependencies": ["ng-scrappy"] },
-    "functions": { "tags": [] }
+    "functions": { "tags": [] },
+    "gql-backend": { "tags": [] }
   }
 }
