--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@angular/router": "^11.2.0",
     "@google-cloud/pubsub": "^2.10.0",
     "@nrwl/angular": "11.5.2",
+    "express": "4.17.1",
     "firebase": "^8.3.1",
     "firebase-admin": "^9.5.0",
     "firebase-functions": "^3.13.2",
@@ -62,12 +63,14 @@
     "@nrwl/cli": "11.5.2",
     "@nrwl/cypress": "11.5.2",
     "@nrwl/eslint-plugin-nx": "11.5.2",
+    "@nrwl/express": "^11.5.2",
     "@nrwl/jest": "11.5.2",
     "@nrwl/linter": "11.5.2",
     "@nrwl/node": "11.5.2",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/tao": "11.5.2",
     "@nrwl/workspace": "11.5.2",
+    "@types/express": "4.17.0",
     "@types/jest": "26.0.8",
     "@types/node": "14.14.33",
     "@typescript-eslint/eslint-plugin": "4.3.0",
