--- a/package.json
+++ b/package.json
@@ -43,10 +43,13 @@
     "@angular/router": "^11.2.0",
     "@google-cloud/pubsub": "^2.10.0",
     "@nrwl/angular": "11.5.2",
+    "apollo-server": "^3.0.0-alpha.3",
     "express": "4.17.1",
     "firebase": "^8.3.1",
     "firebase-admin": "^9.5.0",
     "firebase-functions": "^3.13.2",
+    "graphql": "^15.5.0",
+    "graphql-tag": "^2.11.0",
     "puppeteer": "^8.0.0",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
@@ -93,5 +96,11 @@
     "firebase-functions",
     "puppeteer",
     "@google-cloud/pubsub"
+  ],
+  "gql-backend-dependencies": [
+    "apollo-server@beta",
+    "firebase-admin",
+    "graphql",
+    "graphql-tag"
   ]
 }
