Moved implementation of scrapper to backend-scrapper library

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@ng-scrappy/service-json": ["apps/functions/src/environments/service-account.json"],
       "@ng-scrappy/backend/scrapper": ["libs/backend/scrapper/src/index.ts"]
     },
     "resolveJsonModule": true,
