--- a/nx.json
+++ b/nx.json
@@ -25,6 +25,7 @@
     "ng-scrappy-e2e": { "tags": [], "implicitDependencies": ["ng-scrappy"] },
     "functions": { "tags": [] },
     "gql-backend": { "tags": [] },
-    "backend-scrapper": { "tags": [] }
+    "backend-scrapper": { "tags": [] },
+    "backend-graphql": { "tags": [] }
   }
 }
