--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,8 +15,11 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@ng-scrappy/service-json": ["apps/functions/src/environments/service-account.json"],
-      "@ng-scrappy/backend/scrapper": ["libs/backend/scrapper/src/index.ts"]
+      "@ng-scrappy/service-json": [
+        "apps/functions/src/environments/service-account.json"
+      ],
+      "@ng-scrappy/backend/scrapper": ["libs/backend/scrapper/src/index.ts"],
+      "@ng-scrappy/backend/graphql": ["libs/backend/graphql/src/index.ts"]
     },
     "resolveJsonModule": true,
     "esModuleInterop": true,
