--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "@nrwl/angular": "11.5.2",
     "apollo-server": "^3.0.0-alpha.3",
     "apollo-server-express": "^2.23.0",
+    "core-js": "^3.6.5",
+    "document-register-element": "1.13.1",
     "express": "4.17.1",
     "firebase": "^8.3.1",
     "firebase-admin": "^9.5.0",
@@ -52,6 +54,10 @@
     "graphql": "^15.5.0",
     "graphql-tag": "^2.11.0",
     "puppeteer": "^8.0.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-router-dom": "5.2.0",
+    "regenerator-runtime": "0.13.7",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
     "zone.js": "^0.10.2"
@@ -64,6 +70,10 @@
     "@angular/cli": "~11.0.0",
     "@angular/compiler-cli": "^11.2.0",
     "@angular/language-service": "^11.2.0",
+    "@babel/core": "7.12.13",
+    "@babel/preset-env": "7.12.13",
+    "@babel/preset-react": "7.12.13",
+    "@babel/preset-typescript": "7.12.13",
     "@nrwl/cli": "11.5.2",
     "@nrwl/cypress": "11.5.2",
     "@nrwl/eslint-plugin-nx": "11.5.2",
@@ -72,19 +82,30 @@
     "@nrwl/linter": "11.5.2",
     "@nrwl/node": "11.5.2",
     "@nrwl/nx-cloud": "latest",
+    "@nrwl/react": "12.0.7",
     "@nrwl/tao": "11.5.2",
+    "@nrwl/web": "12.0.7",
     "@nrwl/workspace": "11.5.2",
+    "@testing-library/react": "11.2.6",
     "@types/express": "4.17.0",
     "@types/jest": "26.0.8",
     "@types/node": "14.14.33",
+    "@types/react": "17.0.3",
+    "@types/react-dom": "17.0.3",
+    "@types/react-router-dom": "5.1.7",
     "@typescript-eslint/eslint-plugin": "4.3.0",
     "@typescript-eslint/parser": "4.3.0",
+    "babel-jest": "26.2.2",
     "concurrently": "^6.0.0",
     "cypress": "^6.0.1",
     "dotenv": "8.2.0",
     "eslint": "7.10.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-react": "7.23.1",
+    "eslint-plugin-react-hooks": "4.2.0",
     "jest": "26.2.2",
     "jest-preset-angular": "8.3.2",
     "prettier": "2.2.1",
