--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@angular/platform-browser": "^11.2.0",
     "@angular/platform-browser-dynamic": "^11.2.0",
     "@angular/router": "^11.2.0",
+    "@apollo/client": "^3.3.15",
     "@google-cloud/pubsub": "^2.10.0",
     "@nrwl/angular": "11.5.2",
     "apollo-server": "^3.0.0-alpha.3",
