--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -20,14 +20,13 @@
         "apps/functions/src/environments/service-account.json"
       ],
       "@ng-scrappy/backend/scrapper": ["libs/backend/scrapper/src/index.ts"],
-      "@ng-scrappy/backend/graphql": ["libs/backend/graphql/src/index.ts"]
+      "@ng-scrappy/backend/graphql": ["libs/backend/graphql/src/index.ts"],
+      "@ng-scrappy/models": ["libs/models/src/index.ts"]
     },
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true
   },
   "exclude": ["node_modules", "tmp"],
-  "files": [
-    "apps/react-scrappy/src/main.tsx"
-]
+  "files": ["apps/react-scrappy/src/main.tsx"]
 }
