--- a/apps/react-scrappy/tsconfig.json
+++ b/apps/react-scrappy/tsconfig.json
@@ -1,12 +1,12 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "jsx": "react-jsx",
+    "jsx": "react",
     "allowJs": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true
   },
-  "files": [],
+  "files": ["./src/main.tsx"],
   "include": [],
   "references": [
     {
