--- a/nx.json
+++ b/nx.json
@@ -32,6 +32,7 @@
       "implicitDependencies": ["react-scrappy"]
     },
     "models": { "tags": [] },
-    "backend-db": { "tags": [] }
+    "backend-db": { "tags": [] },
+    "backend-algolia-search": { "tags": [] }
   }
 }
