--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@apollo/client": "^3.3.15",
     "@google-cloud/pubsub": "^2.10.0",
     "@nrwl/angular": "11.5.2",
+    "algoliasearch": "^4.9.0",
     "apollo-server": "^3.0.0-alpha.3",
     "apollo-server-express": "^2.23.0",
     "core-js": "^3.6.5",
