--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "puppeteer": "^8.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-instantsearch-dom": "^6.10.3",
     "react-router-dom": "5.2.0",
     "regenerator-runtime": "0.13.7",
     "rxjs": "~6.6.3",
