--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-instantsearch-dom": "^6.10.3",
+    "react-loading-skeleton": "^2.2.0",
     "react-router-dom": "5.2.0",
     "regenerator-runtime": "0.13.7",
     "rxjs": "~6.6.3",
