--- a/package.json
+++ b/package.json
@@ -128,6 +128,7 @@
     "apollo-server@beta",
     "firebase-admin",
     "graphql",
-    "graphql-tag"
+    "graphql-tag",
+    "algoliasearch"
   ]
 }
