Setup firebase emulators

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "ng serve",
     "build": "ng build --no-content-hash",
     "test": "ng test",
-    "firebase:serve": "concurrently --kill-others \"yarn run build functions --watch\" \"firebase serve --only functions\"",
+    "firebase:serve": "concurrently --kill-others \"yarn run build functions --watch\" \"firebase serve --only functions,pubsub\"",
+    "firebase:emulate": "concurrently --kill-others \"yarn run build functions --watch\" \"firebase emulators:start --only functions,pubsub --inspect-functions\"",
     "firebase:shell": "concurrently --kill-others \"yarn run build functions --watch\" \"firebase functions:shell\" --raw",
     "firebase:deploy": "firebase deploy",
     "lint": "nx workspace-lint && ng lint",
