--- a/firebase.json
+++ b/firebase.json
@@ -9,7 +9,7 @@
     "source": "dist/apps/functions"
   },
   "hosting": {
-    "target": "rx-scrappy",
+    "site": "rx-scrappy",
     "public": "dist/apps/react-scrappy",
     "ignore": [
       "firebase.json",
@@ -22,5 +22,22 @@
         "destination": "/index.html"
       }
     ]
+  },
+  "emulators": {
+    "functions": {
+      "port": 5001
+    },
+    "hosting": {
+      "port": 5000
+    },
+    "ui": {
+      "enabled": true
+    },
+    "firestore": {
+      "port": 8080
+    },
+    "pubsub": {
+      "port": 8085
+    }
   }
 }
