--- a/package.json
+++ b/package.json
@@ -3,6 +3,19 @@
   "version": "0.0.0",
   "license": "MIT",
   "main": "dist/apps/functions/main.js",
+  "browser": {
+    "apollo-server": false,
+    "crypto": false,
+    "fs": false,
+    "express": false,
+    "http": false,
+    "https": false,
+    "net": false,
+    "os": false,
+    "path": false,
+    "stream": false,
+    "zlib": false
+  },
   "scripts": {
     "ng": "nx",
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
@@ -47,7 +60,7 @@
     "@google-cloud/pubsub": "^2.10.0",
     "@nrwl/angular": "11.5.2",
     "algoliasearch": "^4.9.0",
-    "apollo-server": "^3.0.0-alpha.3",
+    "apollo-server": "^2.25.2",
     "apollo-server-express": "^2.23.0",
     "core-js": "^3.6.5",
     "document-register-element": "1.13.1",
@@ -56,7 +69,7 @@
     "firebase-admin": "^9.5.0",
     "firebase-functions": "^3.13.2",
     "graphql": "^15.5.0",
-    "graphql-tag": "^2.11.0",
+    "graphql-tag": "^2.12.4",
     "puppeteer": "^8.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -69,6 +82,7 @@
     "zone.js": "^0.10.2"
   },
   "devDependencies": {
+    "@angular-devkit/architect": ">= 0.900 < 0.1300",
     "@angular-devkit/build-angular": "~0.1102.0",
     "@angular-eslint/eslint-plugin": "~1.0.0",
     "@angular-eslint/eslint-plugin-template": "~1.0.0",
@@ -112,19 +126,18 @@
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-react": "7.23.1",
     "eslint-plugin-react-hooks": "4.2.0",
-    "jest": "26.2.2",
-    "jest-preset-angular": "8.3.2",
-    "prettier": "2.2.1",
-    "ts-jest": "26.4.0",
-    "ts-node": "~9.1.1",
-    "typescript": "~4.0.3",
-    "@angular-devkit/architect": ">= 0.900 < 0.1300",
     "firebase-tools": "^8.0.0 || ^9.0.0",
     "fuzzy": "^0.1.3",
     "inquirer": "^6.2.2",
     "inquirer-autocomplete-prompt": "^1.0.1",
+    "jest": "26.2.2",
+    "jest-preset-angular": "8.3.2",
+    "jsonc-parser": "^3.0.0",
     "open": "^7.0.3",
-    "jsonc-parser": "^3.0.0"
+    "prettier": "2.2.1",
+    "ts-jest": "26.4.0",
+    "ts-node": "~9.1.1",
+    "typescript": "~4.0.3"
   },
   "firebase-functions-dependencies": [
     "firebase-admin",
