--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@google-cloud/pubsub": "^2.10.0",
     "@nrwl/angular": "11.5.2",
     "algoliasearch": "^4.9.0",
+    "angular-instantsearch": "^2.3.0",
     "apollo-server": "^2.25.2",
     "apollo-server-express": "^2.23.0",
     "core-js": "^3.6.5",
