--- a/package.json
+++ b/package.json
@@ -56,11 +56,12 @@
     "@angular/platform-browser": "^11.2.0",
     "@angular/platform-browser-dynamic": "^11.2.0",
     "@angular/router": "^11.2.0",
+    "@angular/service-worker": "^11.2.0",
     "@apollo/client": "^3.3.15",
     "@google-cloud/pubsub": "^2.10.0",
     "@nrwl/angular": "11.5.2",
     "algoliasearch": "^4.9.0",
-    "angular-instantsearch": "^2.3.0",
+    "angular-instantsearch": "^2.2.2",
     "apollo-server": "^2.25.2",
     "apollo-server-express": "^2.23.0",
     "core-js": "^3.6.5",
