--- a/firebase.json
+++ b/firebase.json
@@ -25,7 +25,7 @@
       ]
     },
     {
-      "target": "ng-scrappy",
+      "site": "ng-scrappy",
       "public": "dist/apps/ng-scrappy",
       "ignore": [
         "**/.*"
