--- a/package.json
+++ b/package.json
@@ -45,25 +45,26 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^11.2.0",
-    "@angular/common": "^11.2.0",
-    "@angular/compiler": "^11.2.0",
-    "@angular/core": "^11.2.0",
+    "@angular/animations": "13.2.2",
+    "@angular/common": "13.2.2",
+    "@angular/compiler": "13.2.2",
+    "@angular/core": "13.2.2",
     "@angular/fire": "^6.1.5",
-    "@angular/forms": "^11.2.0",
-    "@angular/platform-browser": "^11.2.0",
-    "@angular/platform-browser-dynamic": "^11.2.0",
-    "@angular/router": "^11.2.0",
-    "@angular/service-worker": "^11.2.0",
+    "@angular/forms": "13.2.2",
+    "@angular/platform-browser": "13.2.2",
+    "@angular/platform-browser-dynamic": "13.2.2",
+    "@angular/router": "13.2.2",
+    "@angular/service-worker": "13.2.2",
     "@apollo/client": "^3.3.15",
     "@google-cloud/pubsub": "^2.10.0",
-    "@nrwl/angular": "11.5.2",
-    "algoliasearch": "^4.9.0",
+    "@nrwl/angular": "13.8.0",
+    "algoliasearch": "^4.12.1",
+    "angular-instantsearch": "^4.1.0",
     "apollo-server": "^2.25.2",
     "apollo-server-express": "^2.23.0",
     "core-js": "^3.6.5",
     "document-register-element": "1.13.1",
-    "express": "4.17.1",
+    "express": "4.17.2",
     "firebase": "^8.3.1",
     "firebase-admin": "^9.5.0",
     "firebase-functions": "^3.13.2",
@@ -74,69 +75,69 @@
     "react-dom": "17.0.2",
     "react-instantsearch-dom": "^6.10.3",
     "react-loading-skeleton": "^2.2.0",
-    "react-router-dom": "5.2.0",
+    "react-router-dom": "5.3.0",
     "regenerator-runtime": "0.13.7",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
-    "zone.js": "^0.10.2"
+    "zone.js": "0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/architect": ">= 0.900 < 0.1300",
-    "@angular-devkit/build-angular": "~0.1102.0",
-    "@angular-eslint/eslint-plugin": "~1.0.0",
-    "@angular-eslint/eslint-plugin-template": "~1.0.0",
-    "@angular-eslint/template-parser": "~1.0.0",
-    "@angular/cli": "~11.0.0",
-    "@angular/compiler-cli": "^11.2.0",
-    "@angular/language-service": "^11.2.0",
+    "@angular-devkit/build-angular": "13.2.2",
+    "@angular-eslint/eslint-plugin": "13.0.1",
+    "@angular-eslint/eslint-plugin-template": "13.0.1",
+    "@angular-eslint/template-parser": "13.0.1",
+    "@angular/cli": "13.2.2",
+    "@angular/compiler-cli": "13.2.2",
+    "@angular/language-service": "13.2.2",
     "@babel/core": "7.12.13",
     "@babel/preset-env": "7.12.13",
     "@babel/preset-react": "7.12.13",
     "@babel/preset-typescript": "7.12.13",
-    "@nrwl/cli": "11.5.2",
-    "@nrwl/cypress": "11.5.2",
-    "@nrwl/eslint-plugin-nx": "11.5.2",
-    "@nrwl/express": "^11.5.2",
-    "@nrwl/jest": "11.5.2",
-    "@nrwl/linter": "11.5.2",
-    "@nrwl/node": "11.5.2",
-    "@nrwl/nx-cloud": "latest",
-    "@nrwl/react": "12.0.7",
-    "@nrwl/tao": "11.5.2",
-    "@nrwl/web": "12.0.7",
-    "@nrwl/workspace": "11.5.2",
-    "@testing-library/react": "11.2.6",
-    "@types/express": "4.17.0",
-    "@types/jest": "26.0.8",
+    "@nrwl/cli": "13.8.0",
+    "@nrwl/cypress": "13.8.0",
+    "@nrwl/eslint-plugin-nx": "13.8.0",
+    "@nrwl/express": "13.8.0",
+    "@nrwl/jest": "13.8.0",
+    "@nrwl/linter": "13.8.0",
+    "@nrwl/node": "13.8.0",
+    "@nrwl/nx-cloud": "13.1.4",
+    "@nrwl/react": "13.8.0",
+    "@nrwl/tao": "13.8.0",
+    "@nrwl/web": "13.8.0",
+    "@nrwl/workspace": "13.8.0",
+    "@testing-library/react": "12.1.2",
+    "@types/express": "4.17.13",
+    "@types/jest": "27.0.2",
     "@types/node": "14.14.33",
-    "@types/react": "17.0.3",
-    "@types/react-dom": "17.0.3",
-    "@types/react-router-dom": "5.1.7",
-    "@typescript-eslint/eslint-plugin": "4.3.0",
-    "@typescript-eslint/parser": "4.3.0",
-    "babel-jest": "26.2.2",
+    "@types/react": "17.0.30",
+    "@types/react-dom": "17.0.9",
+    "@types/react-router-dom": "5.3.1",
+    "@typescript-eslint/eslint-plugin": "5.10.2",
+    "@typescript-eslint/parser": "5.10.2",
+    "babel-jest": "27.2.3",
     "concurrently": "^6.0.0",
     "cypress": "^6.0.1",
-    "dotenv": "8.2.0",
-    "eslint": "7.10.0",
+    "dotenv": "10.0.0",
+    "eslint": "8.7.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
-    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-import": "2.25.2",
     "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-react": "7.23.1",
-    "eslint-plugin-react-hooks": "4.2.0",
+    "eslint-plugin-react": "7.26.1",
+    "eslint-plugin-react-hooks": "4.3.0",
     "firebase-tools": "^8.0.0 || ^9.0.0",
     "fuzzy": "^0.1.3",
     "inquirer": "^6.2.2",
     "inquirer-autocomplete-prompt": "^1.0.1",
-    "jest": "26.2.2",
-    "jest-preset-angular": "8.3.2",
+    "jest": "27.2.3",
+    "jest-preset-angular": "11.0.0",
     "jsonc-parser": "^3.0.0",
     "open": "^7.0.3",
-    "prettier": "2.2.1",
-    "ts-jest": "26.4.0",
+    "prettier": "2.5.1",
+    "ts-jest": "27.0.5",
     "ts-node": "~9.1.1",
-    "typescript": "~4.0.3"
+    "typescript": "4.5.5"
   },
   "firebase-functions-dependencies": [
     "firebase-admin",
