--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "build": "ng build --no-content-hash",
     "test": "ng test",
     "firebase:serve": "concurrently --kill-others \"yarn run build functions --watch\" \"firebase serve --only functions,pubsub\"",
-    "firebase:emulate": "concurrently --kill-others \"yarn run build functions --watch\" \"firebase emulators:start --only functions,pubsub --inspect-functions\"",
+    "firebase:emulate": "firebase functions:config:get > dist/apps/functions/.runtimeconfig.json &&  concurrently --kill-others \"yarn run build functions --watch\" \"firebase emulators:start --only functions,pubsub --inspect-functions\"",
     "firebase:shell": "concurrently --kill-others \"yarn run build functions --watch\" \"firebase functions:shell\" --raw",
     "firebase:deploy": "firebase deploy",
     "lint": "nx workspace-lint && ng lint",
@@ -67,7 +67,7 @@
     "express": "4.17.2",
     "firebase": "^8.3.1",
     "firebase-admin": "^9.5.0",
-    "firebase-functions": "^3.13.2",
+    "firebase-functions": "^3.17.2",
     "graphql": "^15.5.0",
     "graphql-tag": "^2.12.4",
     "puppeteer": "^8.0.0",
